no thermal-simple, fix include paths, defconfig additions

--- a/arch/arm64/configs/oneplus3_defconfig
+++ b/arch/arm64/configs/oneplus3_defconfig
@@ -369,7 +369,7 @@ CONFIG_LIMITS_MONITOR=y
 CONFIG_LIMITS_LITE_HW=y
 CONFIG_THERMAL_QPNP=y
 CONFIG_THERMAL_QPNP_ADC_TM=y
-CONFIG_THERMAL_MONITOR_SIMPLE=y
+# CONFIG_THERMAL_MONITOR_SIMPLE=y
 CONFIG_WCD9335_CODEC=y
 CONFIG_REGULATOR=y
 CONFIG_REGULATOR_FIXED_VOLTAGE=y
@@ -612,3 +612,17 @@ CONFIG_CRYPTO_AES_ARM64_CE_CCM=y
 CONFIG_CRYPTO_AES_ARM64_CE_BLK=y
 CONFIG_CRYPTO_AES_ARM64_NEON_BLK=y
 CONFIG_QMI_ENCDEC=y
+
+CONFIG_THERMAL_TSENS8974=y
+CONFIG_THERMAL_QPNP=y
+CONFIG_THERMAL_QPNP_ADC_TM=y
+CONFIG_SCHEDSTATS=y
+
+CONFIG_USB_NET_DRIVERS=y
+CONFIG_USB_RTL8152=y
+CONFIG_USB_USBNET=y
+CONFIG_USB_NET_AX8817X=y
+CONFIG_USB_NET_AX88179_178A=y
+CONFIG_USB_NET_CDCETHER=y
+CONFIG_USB_NET_NET1080=y
+CONFIG_USB_NET_CDC_SUBSET=y
