--- a/arch/arm64/configs/comma_defconfig
+++ b/arch/arm64/configs/comma_defconfig
@@ -3203,6 +3203,17 @@ CONFIG_MMC_CLKGATE=y
 CONFIG_MMC_PARANOID_SD_INIT=y
 
 #
+# LeEco Drivers
+#
+CONFIG_USB_CCLOGIC=y
+CONFIG_USB_CCLOGIC_PI5USB=y
+CONFIG_USB_CCLOGIC_TUSB302L=y
+CONFIG_USB_CCLOGIC_PTN5150=y
+CONFIG_USB_CCLOGIC_PER30216=y
+CONFIG_USB_CCLOGIC_TUSB320=y
+CONFIG_ANALOGIX_OHIO=y
+
+#
 # MMC/SD/SDIO Card Drivers
 #
 CONFIG_MMC_BLOCK=y
