--- a/arch/arm64/configs/comma_defconfig
+++ b/arch/arm64/configs/comma_defconfig
@@ -1133,10 +1133,6 @@ CONFIG_UID_CPUTIME=y
 # CONFIG_USB_EXT_TYPE_C_PERICOM is not set
 # CONFIG_USB_EXT_TYPE_C_TI is not set
 CONFIG_TI_DRV2667=y
-CONFIG_TUSB320_TYPE_C=y
-CONFIG_FUSB301_TYPE_C=y
-CONFIG_PTN5150_TYPE_C=y
-CONFIG_GPIO_SWITCH=y
 # CONFIG_C2PORT is not set
 
 #
@@ -2000,8 +1996,6 @@ CONFIG_POWER_SUPPLY=y
 # CONFIG_QPNP_CHARGER is not set
 CONFIG_QPNP_SMBCHARGER=y
 CONFIG_QPNP_FG=y
-CONFIG_FG_BQ27541=y
-CONFIG_ONEPLUS_FASTCHG=y
 # CONFIG_QPNP_VM_BMS is not set
 # CONFIG_QPNP_BMS is not set
 # CONFIG_QPNP_LINEAR_CHARGER is not set
@@ -3203,7 +3197,17 @@ CONFIG_MMC_CLKGATE=y
 CONFIG_MMC_PARANOID_SD_INIT=y
 
 #
-# LeEco Drivers
+# OnePlus USB Drivers
+#
+#CONFIG_TUSB320_TYPE_C=y
+#CONFIG_FUSB301_TYPE_C=y
+#CONFIG_PTN5150_TYPE_C=y
+#CONFIG_GPIO_SWITCH=y
+#CONFIG_FG_BQ27541=y
+#CONFIG_ONEPLUS_FASTCHG=y
+
+#
+# LeEco USB Drivers
 #
 CONFIG_USB_CCLOGIC=y
 CONFIG_USB_CCLOGIC_PI5USB=y
@@ -3211,7 +3215,7 @@ CONFIG_USB_CCLOGIC_TUSB302L=y
 CONFIG_USB_CCLOGIC_PTN5150=y
 CONFIG_USB_CCLOGIC_PER30216=y
 CONFIG_USB_CCLOGIC_TUSB320=y
-CONFIG_ANALOGIX_OHIO=y
+#CONFIG_ANALOGIX_OHIO=y
 
 #
 # MMC/SD/SDIO Card Drivers
