--- a/arch/arm64/configs/comma_defconfig
+++ b/arch/arm64/configs/comma_defconfig
@@ -3215,7 +3215,7 @@ CONFIG_USB_CCLOGIC_TUSB302L=y
 CONFIG_USB_CCLOGIC_PTN5150=y
 CONFIG_USB_CCLOGIC_PER30216=y
 CONFIG_USB_CCLOGIC_TUSB320=y
-#CONFIG_ANALOGIX_OHIO=y
+CONFIG_ANALOGIX_OHIO=y
 
 #
 # MMC/SD/SDIO Card Drivers
