--- a/arch/arm64/configs/comma_defconfig
+++ b/arch/arm64/configs/comma_defconfig
@@ -3217,6 +3217,10 @@ CONFIG_USB_CCLOGIC_PER30216=y
 CONFIG_USB_CCLOGIC_TUSB320=y
 CONFIG_ANALOGIX_OHIO=y
 
+CONFIG_MACH_ZL1=y
+CONFIG_LETVS_CLASS=y
+CONFIG_PRODUCT_LE_ZL1=y
+
 #
 # MMC/SD/SDIO Card Drivers
 #
