--- a/arch/arm64/configs/comma_defconfig
+++ b/arch/arm64/configs/comma_defconfig
@@ -1711,7 +1711,6 @@ CONFIG_UNIX98_PTYS=y
 CONFIG_SERIAL_CORE=y
 # CONFIG_SERIAL_JSM is not set
 CONFIG_SERIAL_MSM_HS=y
-# CONFIG_SERIAL_MSM_HSL is not set
 # CONFIG_SERIAL_SCCNXP is not set
 # CONFIG_SERIAL_SC16IS7XX is not set
 # CONFIG_SERIAL_ALTERA_JTAGUART is not set
@@ -1986,7 +1985,6 @@ CONFIG_POWER_SUPPLY=y
 # CONFIG_CHARGER_SMB347 is not set
 # CONFIG_SMB349_USB_CHARGER is not set
 # CONFIG_SMB349_DUAL_CHARGER is not set
-# CONFIG_SMB1351_USB_CHARGER is not set
 # CONFIG_SMB350_CHARGER is not set
 # CONFIG_SMB135X_CHARGER is not set
 # CONFIG_SMB1360_CHARGER_FG is not set
@@ -3207,7 +3205,7 @@ CONFIG_MMC_PARANOID_SD_INIT=y
 #CONFIG_ONEPLUS_FASTCHG=y
 
 #
-# LeEco USB Drivers
+# LeEco Drivers
 #
 CONFIG_USB_CCLOGIC=y
 CONFIG_USB_CCLOGIC_PI5USB=y
@@ -3216,6 +3214,13 @@ CONFIG_USB_CCLOGIC_PTN5150=y
 CONFIG_USB_CCLOGIC_PER30216=y
 CONFIG_USB_CCLOGIC_TUSB320=y
 CONFIG_ANALOGIX_OHIO=y
+CONFIG_SMB1351_USB_CHARGER=y
+
+CONFIG_SERIAL_MSM_HSL=y
+CONFIG_SERIAL_MSM_HSL_CONSOLE=y
+CONFIG_CONSOLE_DYNAMIC_ENABLE=y
+
+CONFIG_BACKLIGHT_LM3697=y
 
 CONFIG_MACH_ZL1=y
 CONFIG_LETVS_CLASS=y
