--- a/arch/arm/boot/dts/qcom/msm8996.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8996.dtsi
@@ -40,7 +40,7 @@
 		i2c12 = &i2c_12;
 		spi0 = &spi_0;
 #if 0
-		spi11 = &spi_11;
+    spi11 = &spi_11;
 #endif
 	};
 
@@ -1805,7 +1805,7 @@
 		clock-frequency = <32768>;
 	};
 
-	qcom,msm-imem@66bf000 {
+	msm_imem: qcom,msm-imem@66bf000 {
 		compatible = "qcom,msm-imem";
 		reg = <0x66bf000 0x1000>; /* Address and size of IMEM */
 		ranges = <0x0 0x66bf000 0x1000>;
