--- a/arch/arm64/configs/comma_defconfig
+++ b/arch/arm64/configs/comma_defconfig
@@ -2310,7 +2310,7 @@ CONFIG_REGULATOR_MEM_ACC=y
 # CONFIG_REGULATOR_TPS6524X is not set
 CONFIG_REGULATOR_RPM_SMD=y
 CONFIG_REGULATOR_QPNP=y
-# CONFIG_REGULATOR_QPNP_LABIBB is not set
+CONFIG_REGULATOR_QPNP_LABIBB=y
 CONFIG_REGULATOR_SPM=y
 # CONFIG_REGULATOR_CPR is not set
 # CONFIG_REGULATOR_CPR2_GFX is not set
