--- a/arch/arm64/configs/comma_defconfig
+++ b/arch/arm64/configs/comma_defconfig
@@ -2310,7 +2310,6 @@ CONFIG_REGULATOR_MEM_ACC=y
 # CONFIG_REGULATOR_TPS6524X is not set
 CONFIG_REGULATOR_RPM_SMD=y
 CONFIG_REGULATOR_QPNP=y
-CONFIG_REGULATOR_QPNP_LABIBB=y
 CONFIG_REGULATOR_SPM=y
 # CONFIG_REGULATOR_CPR is not set
 # CONFIG_REGULATOR_CPR2_GFX is not set
@@ -4233,7 +4232,11 @@ CONFIG_QMI_ENCDEC=y
 # CONFIG_QMI_ENCDEC_DEBUG is not set
 # CONFIG_STRICT_MEMORY_RWX is not set
 
+# leeco
 CONFIG_SERIAL_MSM_HSL=y
 CONFIG_SERIAL_MSM_HSL_CONSOLE=y
 CONFIG_CONSOLE_DYNAMIC_ENABLE=y
+CONFIG_REGULATOR_QPNP_LABIBB=y
+CONFIG_LETVS_CLASS=y
+CONFIG_TOUCHSCREEN_FTS=y
 
