--- a/arch/arm64/configs/comma_defconfig
+++ b/arch/arm64/configs/comma_defconfig
@@ -4240,3 +4240,8 @@ CONFIG_REGULATOR_QPNP_LABIBB=y
 CONFIG_LETVS_CLASS=y
 CONFIG_TOUCHSCREEN_FTS=y
 
+CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_CORE_V26=y
+CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_RMI_DEV_V26=y
+CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_FW_UPDATE_V26=y
+CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_TEST_REPORTING_V26=y
+
