--- a/drivers/input/touchscreen/Kconfig
+++ b/drivers/input/touchscreen/Kconfig
@@ -13,6 +13,7 @@ if INPUT_TOUCHSCREEN
 
 source "drivers/input/touchscreen/synaptics_dsx/Kconfig"
 source "drivers/input/touchscreen/synaptics_dsx_letv/Kconfig"
+source "drivers/input/touchscreen/hideep_letv/Kconfig"
 
 config OF_TOUCHSCREEN
 	def_tristate INPUT
