--- a/arch/arm64/configs/comma_defconfig
+++ b/arch/arm64/configs/comma_defconfig
@@ -3948,7 +3948,7 @@ CONFIG_ARCH_WANT_FRAME_POINTERS=y
 CONFIG_FRAME_POINTER=y
 CONFIG_MAGIC_SYSRQ=y
 CONFIG_MAGIC_SYSRQ_DEFAULT_ENABLE=0x1
-# CONFIG_DEBUG_KERNEL is not set
+CONFIG_DEBUG_KERNEL=y
 
 #
 # Memory Debugging
@@ -3990,7 +3990,8 @@ CONFIG_HAVE_SYSCALL_TRACEPOINTS=y
 CONFIG_HAVE_C_RECORDMCOUNT=y
 # CONFIG_MSM_RTB is not set
 # CONFIG_IPC_LOGGING is not set
-# CONFIG_TRACING_SUPPORT is not set
+CONFIG_TRACING_SUPPORT=y
+CONFIG_SCHED_TRACER=y
 
 #
 # Runtime Testing
